--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "singer",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/singerdp/dhineshpandi.git",
+  "homepage": "https://singerdp.github.io/dhineshpandi",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
